# eStatistika

./: .gitignore  Makefile  QUICK_START.md  README.md  compose.yml  quick-start.sh
api/: BROWSER_ACCESS.md  Dockerfile  README.md  main.py  pyproject.toml
api/src/: config.py
api/src/core/: auth.py  chats.py  dependencies.py  sessions.py  statistics.py
api/src/database/: database.py  models.py
api/src/routers/: auth.py  chat.py  chats.py  statistics.py
api/src/schemas/: __init__.py
api/src/services/: chat_history_service.py  chat_service.py  statistics_service.py
api/static/: index.html  login.html
