[project]
name = "build-club-x-meta"
version = "0.1.0"
description = "Workshop boilerplate for building Llama-powered applications with Ollama and FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.0.0",
    "pydantic-ai-slim>=0.0.14",
    "openai>=1.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "passlib[bcrypt]>=1.7.4",
    "greenlet>=3.2.4",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]
